[tool.poetry]
name = "topmostp"
version = "0.1.10"
description = "A simple CLI tool to retrieve the N top most used ports"
authors = ["SecSI <dev@secsi.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cybersecsi/topmostp"
packages = [{ include = "topmostp" }]

[tool.poetry.dependencies]
certifi="2025.7.14"
click="8.2.1"
idna="3.10"
python = ">=3.11,<3.14"
requests = "^2.32.4"
typer = "0.9.0"
typing_extensions = "4.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
topmostp = 'topmostp.main:app'
